--- a/.github/workflows/github_tests.yml
+++ b/.github/workflows/github_tests.yml
@@ -7,8 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  # job to run unit tests
-  unit_tests:
+  # job to run unit test for data processing
+  unit_tests_dataproc:
     # configure the operating system "environment"
     runs-on: ubuntu-latest
     defaults:
@@ -22,11 +22,29 @@ jobs:
         with:
           activate-environment: S4S
           environment-file: environment.yml
-      - run: cd tests/unit |
-        python test_data_processor.py |
-        python test_plotter.py
-  # job to run functional tests
-  func_tests:
+      - run: |
+          cd tests/unit
+          python test_data_processor.py
+  # job to run unit tests
+  unit_tests_plotting:
+    # configure the operating system "environment"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      # get to branch
+      - uses: actions/checkout@v2
+      # get the proper environment
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: S4S
+          environment-file: environment.yml
+      - run: |
+          cd tests/unit
+          python test_plotter.py
+  # job to run functional tests data
+  func_tests_dataproc:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -37,9 +55,24 @@ jobs:
         with:
           activate-environment: S4S
           environment-file: environment.yml
-      - run: cd tests/func |
-        bash testdata_processor.sh |
-        bash testplotter.sh
+      - run: |
+          cd tests/func
+          bash testdata_processor.sh
+  # job to run functional tests plotting
+  func_tests_plotting:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+           activate-environment: S4S
+          environment-file: environment.yml
+      - run: |
+          cd tests/func
+          bash testplotter.sh
   # job to run pycodestyle
   code_style:
     runs-on: ubuntu-latest
