--- a/.github/workflows/github_tests.yml
+++ b/.github/workflows/github_tests.yml
@@ -58,6 +58,21 @@ jobs:
       - run: |
           cd tests/func
           bash testdata_processor.sh
+  # job to run functional tests plotting
+  func_tests_plotting:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: S4S
+          environment-file: environment.yml
+      - run: |
+          cd tests/func
+          bash testplotter.sh
   code_style:
     runs-on: ubuntu-latest
     defaults:
@@ -69,4 +84,6 @@ jobs:
         with:
           activate-environment: S4S
           environment-file: environment.yml
-      - run: pycodestyle $(git ls-files "*.py")
+      - run: |
+          pycodestyle data_processor.py
+          pycodestyle plotter.py
